--- a/development/dev_app1_adafruit_tinyusb/misc/webhid_testpage/index.html
+++ b/development/dev_app1_adafruit_tinyusb/misc/webhid_testpage/index.html
@@ -3,6 +3,15 @@
     <script src="index.js"></script>
   </head>
   <body>
-    hid test
+    <h3>hid test</h3>
+    <p>
+      left click: open device
+    </p>
+    <p>
+      right click: send test frame
+    </p>
+    <p>
+      logs are emitted in debug console
+    </p>
   </body>
 </html>
